# minibox

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
cli/: __init__.py  client.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx  ToastContainer.tsx
frontend/src/components/Auth/: AuthManager.tsx  LoginScreen.tsx  SetupScreen.tsx
frontend/src/components/Dashboard/: Dashboard.tsx  NewSandboxModal.tsx
frontend/src/components/SandboxPanel/: SandboxPanel.tsx
frontend/src/components/SandboxPanel/tabs/: AgentTab.tsx  BreakpointsTab.tsx  DiffTab.tsx  LogsTab.tsx  OverviewTab.tsx  SchedulesTab.tsx  SettingsTab.tsx  SnapshotsTab.tsx  TerminalTab.tsx  UsageTab.tsx  WorkspaceTab.tsx
frontend/src/stores/: authStore.ts  sandboxStore.ts  toastStore.ts
seccomp/: default.json
src/: __init__.py  auth.py  config.py  logging.py  main.py  main_cli.py
src/api/: acp.py  admin_config.py  agent.py  auth.py  deps.py  exec.py  filesystem.py  network.py  sandbox.py  schedules.py  snapshots.py  templates.py
src/core/: acp.py  agent_setup.py  cgroups.py  egress.py  executor.py  filesystem.py  network.py  sandbox.py  scheduler.py  seccomp.py  snapshots.py  templates.py
src/mcp/: server.py  transport.py
src/models/: sandbox.py
src/orchestration/: breakpoints.py  events.py  reaper.py  registry.py
src/static/: index.html
src/static/assets/: index-Co4P0_ew.css  index-DLSqwBlN.js
