[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minibox"
version = "0.1.0"
description = "Self-hosted agent sandbox — isolated workspaces for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "fastmcp>=3.0.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
minibox = "cli:main"
minibox-server = "src.main_cli:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]


